Solved header spacing with new layout for trading floor page. Decreased font of headline

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,6 +38,10 @@
 	margin-top:20px;
 	color: #FFF;
 }
+#big_board_headline h3 {
+	margin-top:16px;
+	color: #FFF;
+}
 #head {
 	text-align: center;
 }
